--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,5 +1,3 @@
-{% load static tailwind_tags %}
-
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -9,36 +7,43 @@
             {% block title %}
             {% endblock title %}
         </title>
-		{% tailwind_css %}
+        {% load static %}
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="{% static "css/style.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
     </head>
-    <body class="bg-slate-500 w-full h-full m-0 p-0">
+    <body>
         <header>
-            <span>Coovitel</span>
+            <a class="links" href="{% url "inicio" %}">
+                <h1>Coovitel</h1>
+            </a>
             {% if request.user.is_authenticated %}              
-                <nav>
+                <nav class="menu">
                     <ul>
                         <li>
-                            <a href="">Asesores</a>
+                            <a class="links" href="">Asesores</a>
                         </li>
                         <li>
-                            <a href="">Sucursales</a>
+                            <a class="links" href="">Sucursales</a>
                         </li>
                         <li>
-                            <a href="">Comsiones</a>
+                            <a class="links" href="">Comsiones</a>
                         </li>
                     </ul>
                 </nav>
             {% endif %}
             <span>
-                {% if request.user.is_authenticated %}
-                    Hola {{ request.user.first_name|default:request.user.username }},
-                    <a href="{% url "logout" %}">Cerrar Sesión</a>
-                {% else %}
-                    <a href="">Iniciear Sesión</a>
-                {% endif %}
+                <div class="options">
+                    {% if request.user.is_authenticated %}
+                        <p>Hola {{ request.user.first_name|default:request.user.username }}</p>
+                        <p>
+                            <a class="links" href="{% url "password_change" %}">Cambiar contraseña</a> o
+                            <a class="links" href="{% url "logout" %}">Cerrar Sesión</a>
+                        </p>
+                    {% else %}
+                        <p><a href="{% url "login" %}">Iniciar Sesión</a></p>
+                    {% endif %}
+                </div>
             </span>
         </header>
         
