bind funcions in asesors in all view

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -28,6 +28,8 @@
                         <li>
                             <a class="links" href="{% url "asesores" %}">Asesores</a>
                         </li>
+                            <a class="links" href="">Archivos</a>
+                        </li>
                         <li>
                             <a class="links" href="">Comsiones</a>
                         </li>
