--- a/users/templates/users/sucursales.html
+++ b/users/templates/users/sucursales.html
@@ -6,7 +6,7 @@
 {% endblock styles %}
 
 {% block content %}
-    <h2 class="title">Sucursales en Coovitel</h2>
+    <h2 class="title">Sucursales Coovitel</h2>
     <div>
         <table>
             <tr>
