--- a/users/templates/users/createsucursal.html
+++ b/users/templates/users/createsucursal.html
@@ -1,15 +1,11 @@
-{% extends "base.html" %}
-
-{% block content %}
-    <div>
-        <form method="POST">
-            {% csrf_token %}
-            <div>
-                <label for="city">Sucursal Nueva</label>
-                <input type="text" name="city" id="city" required>
-            </div>
-            <input type="submit" value="Crear" href="{% url 'sucursales' %}"/>
-        </form>
-    </div>
-    <a href="{% url 'sucursales' %}">Volver</a>
-{% endblock  %}
+<div>
+    <h2>Registrar nueva Sucursal</h2>
+    <form method="POST">
+        {% csrf_token %}
+        <div>
+            <label for="city">Nombre:</label>
+            <input type="text" name="city" id="city" required>
+        </div>
+        <input type="submit" value="Crear" href="{% url 'sucursales' %}"/>
+    </form>
+</div>
