--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -12,49 +12,89 @@
         {% load static %}
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"/>
     </head>
     <body>
-        <header>
-            <a class="links" href="{% url "inicio" %}">
-                <h1>Coovitel</h1>
+        <aside>
+            <a href="{% url "inicio" %}">
+                <picture>
+                    <source media="(min-width: 540px)" srcset="{% static 'images/logoColor.webp' %}">
+                    <img class="logo" src="{% static 'images/logoColorSmall.webp' %}" alt="logo coovitel">
+                </picture>                
             </a>
-            {% if request.user.is_authenticated %}              
-                <nav class="menu">
-                    <ul>
-                        <li>
-                            <a class="links" href="{% url "sucursales" %}">Sucursales</a>
-                        </li>
-                        <li>
-                            <a class="links" href="{% url "asesores" %}">Asesores</a>
-                        </li>
-                            <a class="links" href="">Archivos</a>
-                        </li>
-                        <li>
-                            <a class="links" href="">Comsiones</a>
-                        </li>
-                    </ul>
-                </nav>
-            {% endif %}
-            <span>
-                <div class="options">
-                    {% if request.user.is_authenticated %}
-                        <p>Hola {{ request.user.first_name|default:request.user.username }}</p>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <a class="links" href="{% url "inicio" %}">
+                            {% include "icons/home.html"%}
+                            <p>
+                                Inico
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="links" href="{% url "sucursales" %}">
+                            {% include "icons/builds.html" %}
+                            <p>
+                                Sucursales
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="links" href="{% url "asesores" %}">
+                            {% include "icons/users.html" %}
+                            <p>
+                                Asesores
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="links" href="">
+                            {% include "icons/files.html" %}
+                            <p>
+                                Archivos
+                            </p>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="links" href="">
+                            {% include "icons/tasas.html" %}
+                            <p>
+                                Tasas
+                            </p>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="out">
+                {% if request.user.is_authenticated %}
+                    <a class="links" href="{% url "logout" %}">
+                        {% include "icons/exit.html" %}
                         <p>
-                            <a class="links" href="{% url "password_change" %}">Cambiar contraseña</a> o
-                            <a class="links" href="{% url "logout" %}">Cerrar Sesión</a>
+                            Cerrar Sesión
                         </p>
-                    {% else %}
-                        <p><a href="{% url "login" %}">Iniciar Sesión</a></p>
-                    {% endif %}
+                    </a>
+                {% endif %}
+            </div>
+        </aside>
+        
+        <main>
+            {% if request.user.is_authenticated %}
+                <div class="options">
+                    <p>Hola {{ request.user.first_name|default:request.user.username }}</p>
+                    <span>
+                        {% include "icons/settings.html" %}
+                        <input type="checkbox">
+                    </span>
+                    <div>
+                        <a href="{% url "password_change" %}">Cambiar contraseña</a>
+                    </div>
                 </div>
-            </span>
-        </header>
-        
-        {% block content %}
-        
-        {% endblock content %}
-        
-        <script src="" async defer></script>
+            {% endif %}
+            {% block content %}
+            
+            {% endblock content %}
+        </main>
+        <script src="scripts/script.js"></script>
     </body>
 </html>
