--- a/account/templates/registration/password_change_done.html
+++ b/account/templates/registration/password_change_done.html
@@ -2,7 +2,15 @@
 
 {% block title %}Cambio de contraseña exitoso{% endblock %}
 
+{% block styles %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/logout.css' %}"/>
+{% endblock styles %}
+
 {% block content %}
-    <h1>Contaseña cambiada.</h1>
-    <p>Su contraseña a cambiado exitosamente.</p>
+    <div class="back"></div>
+    <div class="logout">
+        <h1>Contaseña cambiada.</h1>
+        <p>Su contraseña a cambiado exitosamente.</p>
+    </div>
 {% endblock %}
