--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -2,12 +2,20 @@
 
 {% block title %}Cambio de Contraseña{% endblock %}
 
+{% block styles %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/logout.css' %}"/>
+{% endblock styles %}
+
 {% block content %}
-    <h1>Cambio de Contraseña</h1>
-    <p>Use el siguiente formulario para cambiar su contraseña.</p>
-    <form method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Cambiar"></p>
-        {% csrf_token %}
-    </form>
+    <div class="back"></div>
+    <div class="logout">
+        <h1>Cambio de Contraseña</h1>
+        <p>Use el siguiente formulario para cambiar su contraseña.</p>
+        <form method="post">
+            {{ form.as_p }}
+            <input class="bt-logout" type="submit" value="Cambiar">
+            {% csrf_token %}
+        </form>
+    </div>
 {% endblock %}
