--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -2,17 +2,25 @@
 
 {% block title %}Restablecer su contraseña{% endblock %}
 
+{% block styles %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/logout.css' %}"/>
+{% endblock styles %}
+
 {% block content %}
-<h1>Restablecer contraseña</h1>
-{% if validlink %}
-    <p>Por favor ingrese su nueva contraseña:</p>
-    <form method="post">
-    {{ form.as_p }}
-    {% csrf_token %}
-    <p><input type="submit" value="Cambio de contraseña" /></p>
-    </form>
-{% else %}
-<p>The password reset link was invalid, possibly because it has already
-been used. Please request a new password reset.</p>
-{% endif %}
+    <div class="back"></div>
+    <div class="logout">
+        <h1>Restablecer contraseña</h1>
+        {% if validlink %}
+            <p>Por favor ingrese su nueva contraseña:</p>
+            <form method="post">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <input class="bt-logout" type="submit" value="Cambio de contraseña" />
+            </form>
+        {% else %}
+            <p>El enlace para restablecer la contraseña no era válido, posiblemente porque ya 
+            se había utilizado. Solicite un nuevo restablecimiento de contraseña.</p>
+        {% endif %}
+    </div>
 {% endblock %}
