--- a/users/static/users.css
+++ b/users/static/users.css
@@ -1,3 +1,13 @@
+:root {
+    --backColor: #fdfdfd;
+    --colorWhite: #fff;
+    --colorLinks: #007eb8;
+    --colorOne: #202d54;
+    --colorTwo: #2c3870;
+    --colorThree: #2d2e83;
+    --colorFour: #007eb8;
+}
+
 .title {
-    color: white;
+    color: var(--colorOne);
 }
