--- a/account/static/css/login.css
+++ b/account/static/css/login.css
@@ -40,7 +40,7 @@
     -webkit-box-shadow: inset 0px 0px 28px 2px rgba(0,0,0,0.47);
     -moz-box-shadow: inset 0px 0px 28px 2px rgba(0,0,0,0.47);
     box-shadow: inset 0px 0px 28px 2px rgba(0,0,0,0.47);    
-    padding: 50px;
+    padding: 30px;
     border-radius: 25px;
     background-color: #fdfdfd6b;
     display: flex;
@@ -82,6 +82,7 @@ form p input {
     border: 0;
     border-radius: 25px;
     cursor: pointer;
+    text-align: center;
 }
 
 .login {
