--- a/account/static/css/style.css
+++ b/account/static/css/style.css
@@ -85,14 +85,7 @@ a {
     margin: 10px 10px;
     color: var(--colorWhite);
     justify-content: center;
-}
-
-.link {
-    display: flex;
-    flex-direction: row;
-    margin: 10px 10px;
-    color: var(--colorWhite);
-    justify-content: center;
+    transition: all .3s;
 }
 
 .links p {
@@ -104,6 +97,7 @@ a {
     padding: 10px 15px;
     border-radius: 25px;
     margin: 0;
+    transition: all .3s;
 }
 
 
@@ -114,14 +108,41 @@ a {
     bottom: 0;
 }
 
-.link:hover p {
-    border-bottom: 1px solid var(--colorWhite);
+.link {
+    display: flex;
+    flex-direction: row;
+    margin: 10px 10px;
+    color: var(--colorWhite);
+    justify-content: center;
+    transition: all .3s;
+}
+
+.link p {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 3px;
+}
+
+.link p::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    background-color: var(--colorWhite);
+    transition: width 0.6s ease-in-out;
+transform: translateX(-50%);
+}
+
+.link:hover p::after {
+    width: 100%;
 }
 
 .options {
     background-color: #fff;
     border-radius: 25px;
-    position: absolute;
+    position: fixed;
     right: 0;
     margin: 15px 25px;
     width: 260px;
@@ -222,6 +243,7 @@ a {
 
 .content {
     margin: 20px;
+    height: 90vh;
 }
 
 @media only screen and (max-width:1200px){
@@ -255,5 +277,4 @@ a {
         height: 40px;
         margin: 10px;
     }
-    
 }
