--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -2,8 +2,16 @@
 
 {% block title %}Contraseña cambiada{% endblock %}
 
+{% block styles %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/logout.css' %}"/>
+{% endblock styles %}
+
 {% block content %}
-<h1>Contraseña cambiada.</h1>
-<p>Tu contraseña a sido restablecida con exito!. Puedes <a href="{% url "login" %}">Iniciar Secion
-ahora</a></p>
+    <div class="back"></div>
+    <div class="logout">
+        <h1>Contraseña cambiada.</h1>
+        <p>Tu contraseña a sido restablecida con exito!. Puedes iniciar seción ahora.</p>
+        <a class="bt-logout" href="{% url "login" %}">Iniciar Seción</a>
+    </div>
 {% endblock %}
