--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
 
+{% block styles %}
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/logout.css' %}"/>
+{% endblock styles %}
+
 {% block title %}Restablecer Usuario{% endblock %}
 
 {% block content %}
-    <h1>Olvidaste tu contraseña?</h1>
-    <p>Ingresa tu email para recuperar la contraseña.</p>
-    <form method="post">
-        {{ form.as_p }}
-        <p><input type="submit" value="Enviar email"></p>
-        {% csrf_token %}
-</form>
+    <div class="back"></div>
+    <div class="square-1"></div>
+    <div class="square-2"></div>
+    <div class="logout">
+        <h1>Olvidaste tu contraseña?</h1>
+        <h4>Ingresa tu email para recuperar la contraseña.</h4>
+        <form method="post">
+            {{ form.as_p }}
+                <input class="bt-logout" type="submit" value="Enviar email">
+            {% csrf_token %}
+        </form>
+    </div>
 {% endblock %}
