--- a/users/templates/users/createasesor.html
+++ b/users/templates/users/createasesor.html
@@ -4,7 +4,7 @@
         {% csrf_token %}
         <div>
             <label for="name">Nombre</label>
-            <input type="text" name="name" required>
+            <input type="text" pattern="[A-Za-z ]*" name="name" required>
         </div>
         <select name="sucursal" id="" required>
             <option value="">-- Sucursal --</option>
