--- a/users/templates/users/asesores.html
+++ b/users/templates/users/asesores.html
@@ -43,9 +43,9 @@
                 <tr>
                     <td>{{ asesor.name }}</td>
                     <td>{{ asesor.sucursal }}</td>
-                    <td><a class="links" href="{% url 'comisionesAsesor' asesor.name %}">Comisiones</a></td>
+                    <td><a class="" href="{% url 'comisionesAsesor' asesor.name %}">Comisiones</a></td>
                     {% if permission %}
-                        <td><a class="links" href="{% url 'deleteasesor' asesor.id %}" onclick="return confirm('Esta seguro de eliminar el asesor {{asesor.name}}?')">Borrar</a></td>
+                        <td><a class="" href="{% url 'deleteasesor' asesor.id %}" onclick="return confirm('Esta seguro de eliminar el asesor {{asesor.name}}?')">Borrar</a></td>
                     {% endif %}
                 </tr>
                 {% endfor %}
