--- a/users/templates/users/files.html
+++ b/users/templates/users/files.html
@@ -8,6 +8,7 @@
         <p>{{file.full_date}} - {{file.file}} - {{file.created}}</p>
     {% endfor %}
 
+{% include "pagination.html" with page=files %}
 
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
