--- a/users/templates/users/asesores.html
+++ b/users/templates/users/asesores.html
@@ -21,29 +21,20 @@
             <input type="submit" name="todos" value="Buscar Todos">
         </form>
 
-        <h3>Archivos</h3>
-        <form method="get">
-            <select name="file">
-                <option value="">-- Seleccione un Archivo --</option>
-                {% for file in files %}
-                    <option value="{{ file.full_date }}">{{file.full_date}}</option>
-                {% endfor %}
-            </select>
-        </form>
 
         <div class="bg-black">
             <table class="table-fixed">
                 <tr>
                     <td>Asesor</td>
+                    <td>Rol</td>
                     <td>Sucursal</td>
-                    <td>Comisiones</td>
                     <td></td>
                 </tr>
                 {% for asesor in asesors %}
                 <tr>
                     <td>{{ asesor.name }}</td>
+                    <td>{{ asesor.rol }}</td>
                     <td>{{ asesor.sucursal }}</td>
-                    <td><a class="" href="{% url 'comisionesAsesor' asesor.name %}">Comisiones</a></td>
                     {% if permission %}
                         <td><a class="" href="{% url 'deleteasesor' asesor.id %}" onclick="return confirm('Esta seguro de eliminar el asesor {{asesor.name}}?')">Borrar</a></td>
                     {% endif %}
