--- a/users/templates/users/createasesor.html
+++ b/users/templates/users/createasesor.html
@@ -2,17 +2,7 @@
     <h2>Nuevo asesor</h2>
     <form method="POST">
         {% csrf_token %}
-        <div>
-            <label for="name">Nombre</label>
-            <input type="text" pattern="[A-Za-z ]*" name="name" required>
-        </div>
-        <select name="sucursal" id="" required>
-            <option value="">-- Sucursal --</option>
-            {% for sucursal in citys %}
-                <option value={{ sucursal.city }}>{{ sucursal.city }}</option>
-            {% endfor %}
-        </select>
-        <input type="submit" value="Crear" href="{% url 'asesores' %}"/>
+        {{ form.as_p}}
+        <input type="submit" value"Subir"/>
     </form>
 </div>
-
