Calculate number afiliations and return list and profit

--- a/users/templates/users/list_asesors.html
+++ b/users/templates/users/list_asesors.html
@@ -6,7 +6,7 @@
 <h3>Lista de asesores</h3>
 
 {% for asesor in asesors %}
-    <p>{{ asesor.name }} <a class="" href="{% url 'comisionesAsesor' asesor.name  %}">Comisiones</a></p>
+    <p>{{ asesor.name }} <a class="" href="{% url 'comisionesAsesor' asesor.name file  %}">Comisiones</a></p>
 {% endfor %}
 
 {% endblock content %}
