start profit colocations

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -4,4 +4,6 @@
     <h2>Comisiones {{name}}</h2>
     
     {% include "comisions/afiliaciones.html" %}
+
+    {% include "comisions/colocaciones.html" %}
 {% endblock %}
