--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -10,7 +10,7 @@
 {% block content %}
     <h1 class="principal-title">Aplicacion de Comisiones</h1>
     <div class="init-options">
-        <div class="description">
+        <div class="description info">
             <h2>Conoce y controla tus comisiones mes a mes.</h2>
             <p>Esta app esta diseñada y pensada para que cada asesor pueda conocer sus comisiones mes a mes.</p>
             <p>Como administrador pordras crear sucursales y asesores para poder conocer sus comisiones.</p>
