--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Comisiones {{name}}</h2>
+    <h2>Comisiones {{asesor}}</h2>
     
-    {% include "comisions/afiliaciones.html" %}
+    <!--{% include "comisions/afiliaciones.html" %}-->
 
     {% include "comisions/colocaciones.html" %}
 {% endblock %}
