--- a/account/static/css/style.css
+++ b/account/static/css/style.css
@@ -25,19 +25,25 @@
        opacity: 0;
     }
    }
-   
 
-html {
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+    height: 100vh;
     font-family:Georgia, 'Times New Roman', Times, serif;
     color: var(--colorFour);
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    height: auto;
+    min-height: 100%;
+    min-height: 100vh;
+    overflow-y: scroll;
     background-color: var(--backColor);
     display: grid;
     grid-template-areas:
@@ -47,7 +53,7 @@ body {
 }
 
 aside {
-    height: 100vh;
+    height: 100%;
     grid-area: "aside";
     background-color: var(--colorOne);
 }
@@ -55,6 +61,7 @@ aside {
 main {
     grid-area: "main";
     background-color: #f6f6f6;
+    height: 100%;
 }
 
 a {
@@ -106,6 +113,7 @@ a {
     margin: 20px 20px;
     padding: 0;
     bottom: 0;
+    left: 15px;
 }
 
 .link {
@@ -242,8 +250,7 @@ transform: translateX(-50%);
 }
 
 .content {
-    margin: 20px;
-    height: 90vh;
+    height: 90%;
 }
 
 @media only screen and (max-width:1200px){
@@ -267,6 +274,7 @@ transform: translateX(-50%);
         height: auto;
     }
     .out {
+        left: 0;
         position: relative;
     }
 }
