Add comisiones colocaciones

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h2>Comisiones {{asesor}}</h2>
     
-    <!--{% include "comisions/afiliaciones.html" %}-->
+    {% include "comisions/afiliaciones.html" %}
 
     {% include "comisions/colocaciones.html" %}
 {% endblock %}
