--- a/comisiones/templates/comisions/colocaciones.html
+++ b/comisiones/templates/comisions/colocaciones.html
@@ -15,12 +15,26 @@
         <tr>
             <td>{{col.A_OBLIGA}}</td>
             <td>{{col.NOMINA}}</td>
-            <td>{{col.MONTO}}</td>
-            <td>{{col.CARTERA}}</td>
-            <td>{{col.NETO_ANTES}}</td>
+            <td id="values">{{col.MONTO}}</td>
+            <td id="values">{{col.CARTERA}}</td>
+            <td id="values">{{col.NETO_ANTES}}</td>
             <td>{{col.P_TASEFEC}}</td>
             <td>{{col.F_CORTE}}</td>
             <td>{{col.SUC_PRODUCTO}}</td>
         </tr>
     {% endfor %}
 </table>
+<p>Valor total en Colocaciones: $ <span id="values">{{colocaciones.neto}}</span></p>
+<p>Valor total de Comision: $ <span id="values">{{colocaciones.comision}}</span></p>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        var montos = document.querySelectorAll('#values');
+        montos.forEach(function(monto) {
+            if (monto.textContent!== '') {
+                var num = parseFloat(monto.textContent.replace(/,/g, ''));
+                monto.textContent = num.toLocaleString();
+            }
+        });
+    });
+</script>
+    
