update afiliaciones, colocaciones, cooviahorros

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -6,4 +6,6 @@
     {% include "comisions/afiliaciones.html" %}
 
     {% include "comisions/colocaciones.html" %}
+
+    {% include "comisions/cooviahorros.html" %}
 {% endblock %}
