--- a/comisiones/templates/comisions/afiliaciones.html
+++ b/comisiones/templates/comisions/afiliaciones.html
@@ -15,6 +15,8 @@
             <td>{{afi.NOMINA}}</td>
             <td>{{afi.F_CORTE}}</td>
             <td>{{afi.SUCURSAL}}</td>
+            <td>{{afi.ACUM_AHO}}</td>
+            <td>{{afi.ACUM_APO}}</td>
         </tr>
     {% endfor %}
 </table>
