Add history cooviahorros of asesors and courts

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -3,9 +3,9 @@
 {% block content %}
     <h2>Comisiones {{asesor}}</h2>
     
-    {% include "comisions/afiliaciones.html" %}
+    {% comment %} {% include "comisions/afiliaciones.html" %} {% endcomment %}
 
-    {% include "comisions/colocaciones.html" %}
+    {% comment %} {% include "comisions/colocaciones.html" %} {% endcomment %}
 
     {% include "comisions/cooviahorros.html" %}
 {% endblock %}
