Created CDATS model and read funcion

--- a/comisiones/templates/comisiones.html
+++ b/comisiones/templates/comisiones.html
@@ -7,5 +7,7 @@
 
     {% comment %} {% include "comisions/colocaciones.html" %} {% endcomment %}
 
-    {% include "comisions/cooviahorros.html" %}
+    {% comment %} {% include "comisions/cooviahorros.html" %} {% endcomment %}
+
+    {% include "comisions/cdats.html" %}
 {% endblock %}
