--- a/tasas/templates/control.html
+++ b/tasas/templates/control.html
@@ -6,11 +6,13 @@
     <h2>Control de Tasas y Valores de Comisiones por producto</h2>
 
     
-    {% include "tasas/afiliaciones.html" %}
+    {% comment %} {% include "tasas/afiliaciones.html" %} {% endcomment %}
 
-    {% include "tasas/colocaciones.html" %}
+    {% comment %} {% include "tasas/colocaciones.html" %} {% endcomment %}
 
-    {% include "tasas/cooviahorro.html" %}
+    {% comment %} {% include "tasas/cooviahorro.html" %} {% endcomment %}
+
+    {% include "tasas/cdats.html" %}
 
 
 {% endblock content %}
